# Media_api

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci_media_api.yml
src/: api_doc.rs  auth.rs  kafka.rs  main.rs  upload.rs  validation.rs
